add display for skin Type

--- a/animals_template.html
+++ b/animals_template.html
@@ -5,12 +5,13 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-<li class="cards__item">
+            <li class="cards__item">
 <div class="card__title">American Foxhound</div>
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: North-America</li>
 <li><strong>Type</strong>: Hound</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
@@ -20,6 +21,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Carnivore</li>
 <li><strong>Location</strong>: Eurasia</li>
 <li><strong>Type</strong>: Mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -29,6 +31,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Carnivore</li>
 <li><strong>Location</strong>: North-America</li>
 <li><strong>Type</strong>: mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -38,6 +41,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: South-America</li>
 <li><strong>Type</strong>: Mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -46,6 +50,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Europe</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
@@ -54,6 +59,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Africa</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -63,6 +69,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Carnivore</li>
 <li><strong>Location</strong>: Africa</li>
 <li><strong>Type</strong>: Mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -71,6 +78,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Carnivore</li>
 <li><strong>Location</strong>: North-America</li>
+<li><strong>Skin Type</strong>: Scales</li>
 </ul>
 </p>
 </li>
@@ -80,6 +88,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Central-America</li>
 <li><strong>Type</strong>: rodent</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -88,6 +97,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Europe</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
@@ -96,6 +106,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Herbivore</li>
 <li><strong>Location</strong>: Asia</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
@@ -105,6 +116,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Central-America</li>
 <li><strong>Type</strong>: Mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -114,6 +126,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Central-America</li>
 <li><strong>Type</strong>: mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -123,6 +136,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: North-America</li>
 <li><strong>Type</strong>: Mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -131,6 +145,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Africa</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
@@ -139,6 +154,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Europe</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
@@ -148,6 +164,7 @@
 <ul class="animal_info"><li><strong>Diet</strong>: Carnivore</li>
 <li><strong>Location</strong>: Asia</li>
 <li><strong>Type</strong>: Mammal</li>
+<li><strong>Skin Type</strong>: Fur</li>
 </ul>
 </p>
 </li>
@@ -156,6 +173,7 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: North-America</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
@@ -164,10 +182,10 @@
  <p class="card__text">
 <ul class="animal_info"><li><strong>Diet</strong>: Omnivore</li>
 <li><strong>Location</strong>: Europe</li>
+<li><strong>Skin Type</strong>: Hair</li>
 </ul>
 </p>
 </li>
-
 
         </ul>
     </body>
